--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,61 @@
     padding: 0;
 }
 /* GENERAL */
-
+ul li a{
+  text-decoration: none;
+  list-style: none;
+  color:black;
+  padding: 10px;
+}
+.flex{
+    display: flex;
+    align-items: center;
+}
+.big-container{
+    max-width: 1200px ;
+    margin: auto;
+}
+.box-text{
+    width: calc(100% - 800px); 
+}
+.box-img{
+    width: calc(100% - 400px);
+}
+/* typo */
+h1{
+    font-size: 60px;
+    text-align: center;
+}
 /* HEADER */
+header{
+    background-color: #b4d0e7;
+    
+}
+.banner{
+    background-color: white; 
+    position: fixed;
+    padding: 0px 15px;
+    width: 100%;
+    height: 80px;
+}
+.container-banner{
+    width: 50%;
+}
+.left-banner{
+    justify-content: flex-start;
+}
+.right-banner{
+    justify-content: flex-end;
+}
+/* BOTTOM-HEADER */
+.bottom-header{
+    padding-top: 200px;
+}
+
+/* BUTTON */
+button{
+    background-color: #0061ff;
+    padding: 10px 15px;
+    border: none;
+    color: white;
+}
