--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,9 @@
     padding: 0;
 }
 /* GENERAL */
+body{
+    font-family: 'Open Sans', sans-serif;
+}
 ul li a{
   text-decoration: none;
   list-style: none;
@@ -13,6 +16,8 @@ ul li a{
 }
 .flex{
     display: flex;
+}
+.center{
     align-items: center;
 }
 .big-container{
@@ -20,20 +25,36 @@ ul li a{
     margin: auto;
 }
 .box-text{
-    width: calc(100% - 800px); 
+    width: calc(100% - 820px); 
+    margin: 0px 10px;
+    font-size: 16px;
+}
+.box-text > * {
+    padding-bottom: 40px;
+}
+.box-text i{
+    font-size: 50px;
 }
 .box-img{
-    width: calc(100% - 400px);
+    width: calc(100% - 420px);
+    margin: 0px 10px;
+}
+img{
+    width: 100%;
+  
+}
+.img-header{
+    position: relative;
+    bottom: -60px;
 }
 /* typo */
 h1{
     font-size: 60px;
-    text-align: center;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 /* HEADER */
 header{
     background-color: #b4d0e7;
-    
 }
 .banner{
     background-color: white; 
@@ -51,9 +72,10 @@ header{
 .right-banner{
     justify-content: flex-end;
 }
+
 /* BOTTOM-HEADER */
 .bottom-header{
-    padding-top: 200px;
+    padding-top: 150px;
 }
 
 /* BUTTON */
