--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
-ul li a{
+ul li a, ul li{
   text-decoration: none;
   list-style: none;
   color:black;
@@ -24,15 +24,19 @@ ul li a{
     max-width: 1200px ;
     margin: auto;
 }
-.box-text{
+.small-container{
+    max-width: 1000px;
+    margin: auto;
+}
+.box-header{
     width: calc(100% - 820px); 
     margin: 0px 10px;
     font-size: 16px;
 }
-.box-text > * {
+.box-header > * {
     padding-bottom: 40px;
 }
-.box-text i{
+.box-header i{
     font-size: 50px;
 }
 .box-img{
@@ -48,10 +52,16 @@ img{
     bottom: -60px;
 }
 /* typo */
-h1{
-    font-size: 60px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+h1,h2,h3,h4,h5,h6{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
+h1{
+    font-size: 80px; 
+}
+h2{
+    font-size: 40px; 
+}
+
 /* HEADER */
 header{
     background-color: #b4d0e7;
@@ -74,7 +84,7 @@ header{
 }
 
 /* BOTTOM-HEADER */
-.bottom-header{
+.section-space{
     padding-top: 150px;
 }
 
@@ -84,4 +94,17 @@ button{
     padding: 10px 15px;
     border: none;
     color: white;
+}
+/* MAIN */
+
+.check-box{
+    padding: 70px 0px 50px;
+}
+.main-box{
+    width: calc(100%  / 3 - 30px);
+    margin: 15px;
+    background-color: lightblue;
+}
+.main-structure{
+    justify-content: space-between;
 }
