--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,17 @@
 body{
     font-family: 'Open Sans', sans-serif;
 }
-header ul li a,main ul li {
+header ul li a{
   text-decoration: none;
   list-style: none;
   color:black;
   padding: 10px;
+}
+.first-session ul li{
+    text-decoration: none;
+    list-style-type: none;
+    color:black;
+    padding-bottom: 15px ;
 }
 .flex{
     display: flex;
@@ -47,7 +53,6 @@ header ul li a,main ul li {
 img{
     width: 100%;
     display: block;
-  
 }
 .img-header{
     position: relative;
@@ -79,6 +84,10 @@ h5{
 .sixth-session p{
     font-weight: bold;
 }
+.first-session h6{
+    font-size: 18px;
+    padding: 30px 0px;
+}
 
 /* HEADER */
 header,.free-trial{
@@ -88,7 +97,7 @@ header,.free-trial{
     background-color: white; 
     position: fixed;
     padding: 0px 15px;
-    width: 100%;
+    width: 100vw;
     height: 80px;
     z-index: 100;
 }
@@ -110,15 +119,16 @@ button{
     color: white;
 }
 /* MAIN FIRST SESSION*/
-
+.first-session span{
+    margin-left: -18px;
+}
 .check-box{
     padding: 70px 0px 50px;
 }
 .vertical-main-box{
-    width: calc(100%  / 3 - 30px);
-    margin: 15px;
+    width: calc(100%  / 3 - 20px);
+    margin: 10px;
     background-color: white;
-    padding: 0px 20px;
     border: 1px solid lightgray;
 }
 .main-structure{
@@ -129,6 +139,9 @@ button{
     font-size: 16px;
     border-bottom: 1px solid lightgray;
     padding: 10px 0px;
+}
+.price-information{
+    padding: 20px 40px;
 }
 .price-information small{
  display: block;
@@ -143,6 +156,7 @@ button{
 .orizzontal-main-box{
     width: 100%;
     border: 1px solid lightgrey;
+    margin-top: 20px;
 }
 .contacts{
     padding: 25px;   
@@ -191,15 +205,15 @@ main .box-text button{
 /* MAIN FIFTH SESSION */
 .column-partner{
     width: calc(100vw / 3 - 6px);
-
+    height: calc(100vw / 3);
 }
 .box-partner{
-    width: 16.5vw;
-    height: 16.5vw;
+    width: 50%;
+    height: 50%;
 }
 .box-partner img{
    height: 100%;
-   padding: 0px 80px;
+   padding: 0px 80px;  
 }
 
 /* PARTNER PRIMA E TERZA COLONNA */
@@ -214,7 +228,7 @@ main .box-text button{
     background-color: #0093ce;    
 }
 .fix-padding{
-    padding: 140px 80px !important;
+   padding: 140px 80px !important;
 }
 .topps{
     background-color: #ff1c1c ;
@@ -234,11 +248,17 @@ main .box-text button{
 
 /* SECONDA COLONNA */
 .second-column div{
-    width: 270px;
+    width: calc(100% - 66vw);
     padding-bottom: 100px ;
 }
+.scroll{
+    overflow-y: auto;
+}
 .second-column{
-    padding: 50px;
+    padding: 50px;  
+}
+.logo{
+    width: 180px;
 }
 /* FREE TRIAL */
 .free-trial button{
@@ -297,4 +317,14 @@ footer div ul li a {
 footer div ul li{
     list-style-type: none;   
     padding: 10px 0px;
+}
+/* BOTTOM-FOOTER */
+.bottom-footer{
+    padding: 30px 0px;
+    border-top: 1px solid white;
+    width: 15%;
+}
+.bottom-footer a{
+    text-decoration: none;
+    color:white;
 }
