--- a/css/animation.css
+++ b/css/animation.css
@@ -13,7 +13,7 @@ header .box-70:active{
 .fifth-session .box-partner:hover{
     transform: scale(1.01);
     border: 1px solid black;
-    animation: rotate 1.5s linear ;
+    animation: rotate 3s linear ;
     border-radius: 20%;
 }
 .fifth-session .scroll:hover{
@@ -50,7 +50,13 @@ footer .footer-column li:hover {
     0%{
         transform: rotate(0deg);
     }
-    100%{
+    45%{
         transform: rotate(360deg);
+    }
+    55%{
+        transform: rotate(360deg);
+    }
+    100%{
+        transform: rotate(0deg);
     }
 }
